# mms

./: LICENCE  Makefile.am  configure.ac  example.cpp
include/: Makefile.am
include/mms/: cast.h  copy.h  map.h  optional.h  ptr.h  set.h  string.h  transient.h  type_traits.h  unordered_map.h  unordered_set.h  vector.h  version.h  writer.h
include/mms/features/: c++11.h
include/mms/features/hash/: boost.h  c++11.h
include/mms/features/optional/: boost.h
include/mms/features/shared_ptr/: boost.h  c++11.h
include/mms/features/type_traits/: boost.h  c++11.h  intrinsics.h
include/mms/impl/: config.h  container.h  defs.h  front_remove_iterator.h  fwd.h  hashtable.h  offsets.h  pair.h  tags.h  writer-impl.h
tests/: Makefile.am  align_tools.h  mms_cast_test.cpp  mms_diff_test.cpp  mms_hash_test.cpp  mms_map_test.cpp  mms_move_cr_test.cpp  mms_optional_test.cpp  mms_ptr_test.cpp  mms_set_test.cpp  mms_string_comparator_test.cpp  mms_string_test.cpp  mms_struct_test.cpp  mms_test.cpp  mms_test_main.cpp  mms_transient_test.cpp  mms_vector_test.cpp  mms_version_test.cpp  ptr_recursive.h  stub_test.sh  test_config.h  tools.h
