nobase_include_HEADERS = \
    mms/cast.h \
    mms/copy.h \
    mms/map.h \
    mms/optional.h \
    mms/ptr.h \
    mms/set.h \
    mms/string.h \
    mms/transient.h \
    mms/type_traits.h \
    mms/unordered_map.h \
    mms/unordered_set.h \
    mms/vector.h \
    mms/version.h \
    mms/impl/config.h \
    mms/impl/container.h \
    mms/impl/defs.h \
    mms/impl/front_remove_iterator.h \
    mms/impl/fwd.h \
    mms/impl/hashtable.h \
    mms/impl/offsets.h \
    mms/impl/pair.h \
    mms/impl/tags.h \
    mms/impl/writer-impl.h \
    mms/features/c++11.h \
    mms/features/hash/boost.h \
    mms/features/hash/c++11.h \
    mms/features/optional/boost.h \
    mms/features/shared_ptr/boost.h \
    mms/features/shared_ptr/c++11.h \
    mms/features/type_traits/boost.h \
    mms/features/type_traits/c++11.h \
    mms/features/type_traits/intrinsics.h \
    mms/writer.h
